[package]
name = "git-history-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
git2 = "0.20.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["blocking"] }
flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
rayon = "1.8.1"
zstd = "0.13.3"

[[bin]]
name = "history"
path = "src/history/main.rs"

[[bin]]
name = "archive"
path = "src/archive/main.rs"
